# Student-Manager

./: CMakeLists.txt  README.md
Manager/: CMakeLists.txt
Manager/include/: Score_range.h  auth.h  user_manager.h
Manager/src/: Score_range.cpp  auth.cpp  config.cpp  main.cpp  stu-info.cpp  user_manager.cpp
include/: Score_range.h  config.h  stu-info.h  stu-info3.hpp
src/: Score_range.cpp  config.cpp  main.cpp  stu-info.cpp  stu-info3.cpp
